--- a/.github/workflows/ci-cd-workflow.yaml
+++ b/.github/workflows/ci-cd-workflow.yaml
@@ -81,6 +81,6 @@ jobs:
           node-version: 18
       - run: npm ci
       - run: npm run build
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      - uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
