Fixing readme and keywords

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tracenova",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Sourcecode instrumentation with Open-Telemetry for nodejs",
   "type": "module",
   "scripts": {
@@ -46,5 +46,18 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "keywords": [
+    "opentelemetry",
+    "tracing",
+    "instrumentation",
+    "telemetry",
+    "wrapper",
+    "monitoring",
+    "observability",
+    "nodejs",
+    "npm",
+    "es6",
+    "decorator"
+  ]
 }
